<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/f2"
    tools:context=".LoginActivity2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/shape77" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/user2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/assurancemaldielabel"
            android:textColor="@color/blue0"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/email3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/designelabel"
        android:drawableLeft="@drawable/user"
        android:ems="10"
        android:fontFamily="@font/playfairdisplay"
        android:hint="Email"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColorHint="@color/blue0"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/motpasse2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/designelabel"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:fontFamily="@font/playfairdisplay"
        android:hint="@string/motdepasselabel"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColorHint="@color/blue0"
        android:textSize="15dp" />

    <Button
        android:id="@+id/seconnecterbtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/designe_btn"
        android:fontFamily="@font/robotoblack"
        android:onClick="goToActivity5"
        android:text="@string/seconnecterlabel"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/seconnecterbtnadmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/designe_btn"
        android:fontFamily="@font/robotoblack"
        android:onClick="goToActivity5"
        android:text="Se connecter Admin"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/motpasseoublie2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:fontFamily="@font/robotoblack"
        android:gravity="center"
        android:text="@string/mdpsoublielabel"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/sincrire2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/robotoblack"
        android:gravity="center"
        android:onClick="goToInscription3"
        android:text="@string/sincrirelabel"
        android:textColor="@color/black"
        android:textSize="18dp" />



</LinearLayout>