<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity1" >


    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:srcCompat="@drawable/user2" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/robotoblack"
        android:gravity="center"
        android:text="@string/bienvenuelabel"
        android:textColor="@color/blue0"
        android:textSize="25dp" />

    <Button
        android:id="@+id/connexionbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/designe_btn"
        android:fontFamily="@font/robotoblack"
        android:onClick="connexion0"
        android:text="@string/connexionbutton"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/sincrirebtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/designe_btn"
        android:text="@string/sincrirebutton"
        android:fontFamily="@font/robotoblack"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:onClick="sincrire0"/>


</LinearLayout>